refactor: reformat & clean sources